Deleted unnecessary gutter

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <input type="text" id="description" placeholder="Enter a title">
     </div>
     
-    <div class="row">
-      <div class="col">
+    <div class="row g-0">
+      <div class="col-md-6">
         <button id="add">Add Money</button>
         <div id="inCash"></div>
       </div>
-      <div class="col">
+      <div class="col-md-6">
         <button id="take">Take Money</button>
         <div id="outCash"></div>
       </div>
